Revision history for Perl extension Net::Server.

0.99   July 08 2010
        - Add customizable  check_for_spawn and min_child_ttl settings in PreFork (Graham Barr)
        - Add other_child_died_hook (Daniel Kahn Gillmor)
        - Fix tie_stdout mode to not warn about unopen handles.
        - Added Net::Server::HTTP base class for basic HTTP daemon handling.

0.98   May 05 2010
        - Add SSLeay proto - finally a workable SSL solution.
        - Add minimal Net::Server::TiedHandle to allow for STDIN and STDOUT to work with SSLEAY
        - Net::Server::TiedHandle also support tied_stdin_callback and tied_stdout_callback
       Feb 08 2008
        - Allow for port => 0 which lets the OS auto assign a port on some OSes (Blackie Hlasek)
        - Add idle_loop_hook to PreForkSimple and PreFork (David Zuhn)
        - Add consistent formatting capabilities to the log method (whethere Syslog is used or not) (David Zuhn)
        - Warn when default listen value is used - try to make it a sensible default (Mark Martinec)
        - Allow for non-zero exit value - particularly when called from fatal (David Schweikert)

0.97   Jul 25 2007
        - Allow for better handling of setlogsock depending upon the version of Sys::Syslog installed (David Schweikert)
        - Update examples with minimal pod and working synopses
        - Added post_client_connection_hook (Mihail Nasedkin)

0.96   Mar 23 2007
        - Allow for conf_file to be specified in the default_values.
        - Add perldoc for why we use a template in options.
        - Fix syslog log options regex again (Carlos Velasco)
        - Fix ->autoflush (needs FileHandle) (Paul Miller)
        - Add handle_syslog_error to allow catching errors during syslog writes (Patrik Wallstrom)
        - Add open_syslog to slightly abstract opening of syslog.
        - Add numerous patches from Rob Mueller to cleanup child accounting in PreFork server.

0.95   Feb 02 2007