@@ -3,6 +3,7 @@ Revision history for Perl extension Net::Server.
 0.99   July 08 2010
         - Add customizable  check_for_spawn and min_child_ttl settings in PreFork (Graham Barr)
         - Add other_child_died_hook (Daniel Kahn Gillmor)
+        - Make Multiplex do $mux->add($sock) for UDP sockets (Kristoffer Møllerhøj)
         - Fix tie_stdout mode to not warn about unopen handles.
         - Added Net::Server::HTTP base class for basic HTTP daemon handling.
 
